Bug 243479 - KDE 4 - Kmymoney Crashes opening Ledgers
Summary: KDE 4 - Kmymoney Crashes opening Ledgers
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-03 07:24 UTC by john
Modified: 2010-07-24 09:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description john 2010-07-03 07:24:51 UTC
Application: kmymoney (3.98.1)
KDE Platform Version: 4.4.90 (KDE 4.4.90 (KDE 4.5 RC1))
Qt Version: 4.7.0
Operating System: Linux 2.6.32-23-generic x86_64
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
- What I was doing when the application crashed:
Simplly clicking on the Ledgers Icon causes the crash - repeatable.

The crash can be reproduced every time.

-- Backtrace:
Application: KMyMoney (kmymoney), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f1504dcb760 (LWP 29738))]

Thread 2 (Thread 0x7f14eb4bd710 (LWP 29739)):
#0  0x00007f1501b8ba2d in __pthread_mutex_unlock_usercnt (mutex=0xd3aa08) at pthread_mutex_unlock.c:52
#1  __pthread_mutex_unlock (mutex=0xd3aa08) at pthread_mutex_unlock.c:290
#2  0x00007f14f962e869 in g_main_context_acquire () from /lib/libglib-2.0.so.0
#3  0x00007f14f9630295 in ?? () from /lib/libglib-2.0.so.0
#4  0x00007f14f96308fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#5  0x00007f15007dd9c6 in QEventDispatcherGlib::processEvents (this=0xd4b4f0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#6  0x00007f15007b05b2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#7  0x00007f15007b098c in QEventLoop::exec (this=0x7f14eb4bcdb0, flags=) at kernel/qeventloop.cpp:201
#8  0x00007f15006bc1cd in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#9  0x00007f15007904d8 in QInotifyFileSystemWatcherEngine::run (this=0x12214c0) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00007f15006bf14e in QThreadPrivate::start (arg=0x12214c0) at thread/qthread_unix.cpp:266
#11 0x00007f1501b879ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#12 0x00007f14fef2b6fd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f1504dcb760 (LWP 29738)):
[KCrash Handler]
#6  0x0000000000743b29 in AccountSet::load (this=0x7fffb07bb910, selector=0x0) at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/kmymoney/widgets/kmymoneyaccountselector.cpp:235
#7  0x000000000046a58f in KMyMoneyApp::slotUpdateMoveToAccountMenu (this=0xded0f0) at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/kmymoney/kmymoney.cpp:5336
#8  0x00000000004a3aff in KMyMoneyApp::qt_metacall (this=0xded0f0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffb07bbeb0)
    at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/build/kmymoney/kmymoney.moc:483
#9  0x00007f15007c9597 in QMetaObject::activate (sender=0xded0f0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffb07bb85c) at kernel/qobject.cpp:3280
#10 0x000000000045f035 in KMyMoneyApp::accountSelected (this=0x7fffb07bb910, _t1=<value optimized out>) at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/build/kmymoney/kmymoney.moc:627
#11 0x0000000000489140 in KMyMoneyApp::slotSelectAccount (this=0xded0f0, obj=<value optimized out>) at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/kmymoney/kmymoney.cpp:6055
#12 0x00000000004a3f62 in KMyMoneyApp::qt_metacall (this=0xded0f0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffb07bc4b0)
    at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/build/kmymoney/kmymoney.moc:552
#13 0x00007f15007c9597 in QMetaObject::activate (sender=0xd57870, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffb07bb85c) at kernel/qobject.cpp:3280
#14 0x0000000000509f82 in KCategoriesView::selectObject (this=0x7fffb07bb910, _t1=<value optimized out>)
    at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/build/kmymoney/views/kcategoriesview.moc:110
#15 0x000000000050a7d9 in KCategoriesView::qt_metacall (this=0xd57870, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffb07bc5e0)
    at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/build/kmymoney/views/kcategoriesview.moc:90
#16 0x00007f15007c9597 in QMetaObject::activate (sender=0xd43470, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffb07bb85c) at kernel/qobject.cpp:3280
#17 0x000000000074e712 in KMyMoneyAccountTreeView::selectObject (this=0x7fffb07bb910, _t1=<value optimized out>)
    at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/build/kmymoney/widgets/kmymoneyaccounttreeview.moc:100
#18 0x0000000000750c33 in KMyMoneyAccountTreeView::currentChanged (this=0xd43470, current=<value optimized out>, previous=<value optimized out>)
    at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/kmymoney/widgets/kmymoneyaccounttreeview.cpp:90
#19 0x00000000007503f3 in KMyMoneyAccountTreeView::qt_metacall (this=0xd43470, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffb07bc870)
    at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/build/kmymoney/widgets/kmymoneyaccounttreeview.moc:88
#20 0x00007f15007c9597 in QMetaObject::activate (sender=0xd19d50, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffb07bb85c) at kernel/qobject.cpp:3280
#21 0x00007f15000d0aba in QItemSelectionModel::currentChanged (this=0x7fffb07bb910, _t1=<value optimized out>, _t2=<value optimized out>) at .moc/release-shared/moc_qitemselectionmodel.cpp:159
#22 0x00007f15000d0c02 in QItemSelectionModel::setCurrentIndex (this=0xd19d50, index=..., command=<value optimized out>) at itemviews/qitemselectionmodel.cpp:1156
#23 0x00007f1500080bb4 in QAbstractItemView::mousePressEvent (this=0xd43470, event=<value optimized out>) at itemviews/qabstractitemview.cpp:1657
#24 0x00007f14ffb91185 in QWidget::event (this=0xd43470, event=0x7fffb07bd810) at kernel/qwidget.cpp:8093
#25 0x00007f14fff4f6a6 in QFrame::event (this=0xd43470, e=0x7fffb07bd810) at widgets/qframe.cpp:557
#26 0x00007f15000854cb in QAbstractItemView::viewportEvent (this=0xd43470, event=0x7fffb07bd810) at itemviews/qabstractitemview.cpp:1619
#27 0x00007f15000c3285 in QTreeView::viewportEvent (this=0xd43470, event=0x7fffb07bd810) at itemviews/qtreeview.cpp:1256
#28 0x00007f15007b10a7 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0xd42210, event=0x7fffb07bd810) at kernel/qcoreapplication.cpp:847
#29 0x00007f14ffb3b81c in QApplicationPrivate::notify_helper (this=0xcbbe80, receiver=0xd42210, e=0x7fffb07bd810) at kernel/qapplication.cpp:4354
#30 0x00007f14ffb41b0e in QApplication::notify (this=0xcbbd70, receiver=0xd42210, e=0x7fffb07bd810) at kernel/qapplication.cpp:3923
#31 0x00007f1502ead6b6 in KApplication::notify (this=0xcbbd70, receiver=0xd42210, event=0x7fffb07bd810) at ../../kdeui/kernel/kapplication.cpp:309
#32 0x00007f15007b187c in QCoreApplication::notifyInternal (this=0xcbbd70, receiver=0xd42210, event=0x7fffb07bd810) at kernel/qcoreapplication.cpp:732
#33 0x00007f14ffb405be in QCoreApplication::sendEvent (receiver=0xd42210, event=0x7fffb07bd810, alienWidget=0xd42210, nativeWidget=0xe41b40, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#34 QApplicationPrivate::sendMouseEvent (receiver=0xd42210, event=0x7fffb07bd810, alienWidget=0xd42210, nativeWidget=0xe41b40, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:3023
#35 0x00007f14ffbc2a75 in QETWidget::translateMouseEvent (this=0xe41b40, event=<value optimized out>) at kernel/qapplication_x11.cpp:4403
#36 0x00007f14ffbc13bc in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fffb07be130) at kernel/qapplication_x11.cpp:3536
#37 0x00007f14ffbed482 in x11EventSourceDispatch (s=0xcbfd50, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#38 0x00007f14f962c8c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#39 0x00007f14f9630748 in ?? () from /lib/libglib-2.0.so.0
#40 0x00007f14f96308fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#41 0x00007f15007dd973 in QEventDispatcherGlib::processEvents (this=0xc9bf20, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#42 0x00007f14ffbecdee in QGuiEventDispatcherGlib::processEvents (this=0x7fffb07bb910, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#43 0x00007f15007b05b2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#44 0x00007f15007b098c in QEventLoop::exec (this=0x7fffb07be460, flags=) at kernel/qeventloop.cpp:201
#45 0x00007f15007b4a3b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#46 0x000000000045cb98 in main (argc=<value optimized out>, argv=<value optimized out>) at /home/john/AppDownLoads/Applications/kmymoney-3.98.1/kmymoney/main.cpp:277

Possible duplicates by query: bug 236413, bug 234113.

Reported using DrKonqi
Comment 1 Alvaro Soliverez 2010-07-03 12:41:47 UTC
Have you run the consistency check from the Tools menu?

Could you go to Save As, select the anonymous file format and save it, and attach it here?
That will save your file in .xml, without any personal information, but with enough data to allow us to pinpoint what's going on.
Comment 2 Thomas Baumgart 2010-07-23 11:01:22 UTC
Any news on that anonymous file which should really help to solve this issue?
Comment 3 Thomas Baumgart 2010-07-24 09:04:29 UTC
Looks like the dynamic transaction move menu could not be created in KMyMoneyApp::createTransactionMoveMenu().  Is the application properly installed? I'll add a fix so that the crash does not happen anymore, but this might rise a new issue.
Comment 4 Thomas Baumgart 2010-07-24 09:05:38 UTC
SVN commit 1153857 by tbaumgart:

Prevent crash in case the move transaction menu cannot be created.

BUG: 243479

 M  +6 -1      kmymoney.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1153857