Prevent crash in case the move transaction menu cannot be created.

BUG: 243479

svn path=/trunk/extragear/office/kmymoney/; revision=1153857